--- a/maquiagem.css
+++ b/maquiagem.css
@@ -4,7 +4,7 @@ background-color:rgb(209, 61, 61);
 width:400px;
 height:240px;
 font-size:60px;
-float:left;
+margin-right:30px;
 }
 
 #verdo {
@@ -13,7 +13,9 @@ background-color:rgb(80, 207, 80);
  width:400px;
  height:240px;
  font-size:60px;
- float:left;
+ border-top-left-radius:15px;
+ border-bottom-left-radius:15px;
+ margin-right:30px;
 }
 
 #red:hover {
@@ -21,7 +23,7 @@ background-color:rgb(80, 207, 80);
         background-color:rgb(206, 0, 0);
         width:400px;
         height:240px;
-        transition-delay:0.08s;
+        transition-delay:0.07s;
 }
         
 #verdo:hover {
@@ -29,15 +31,47 @@ background-color:rgb(80, 207, 80);
         background-color:rgb(8, 196, 8);
         width:400px;
         height:240px;
-        transition-delay:0.08s;
+        transition-delay:0.07s;
 }
 
 
 #aa {
-    border: 2px groove rgb(167, 167, 167);
-    background-color:rgb(255, 255, 255);
-     width:400px;
-     height:240px;
-     font-size:60px;
-     float:bottom;
+border: 2px groove rgb(150, 150, 150);
+background-color:rgb(230, 230, 230);
+width:400px;
+height:240px;
+font-size:60px;
+border-bottom-right-radius:15px;
+border-top-right-radius:15px;
     }
+
+    #aa:hover {
+        border: 8px solid rgb(211, 211, 211);
+        background-color:rgb(247, 247, 247);
+        width:400px;
+        height:240px;
+        transition-delay:0.07s;
+}
+
+
+
+
+
+
+
+
+h1 {
+font-size:70px;
+font-weight:900;
+display: block;
+}
+
+body {
+padding:40px; 
+border:20px solid rgb(97, 97, 97);      
+display: block;
+}
+
+html {
+        background-color: white;
+}
