--- a/maquiagem.css
+++ b/maquiagem.css
@@ -7,6 +7,15 @@ font-size:60px;
 margin-right:30px;
 }
 
+     #red:hover {
+        border: 8px solid rgb(165, 12, 12);
+        background-color:rgb(206, 0, 0);
+        width:400px;
+        height:240px;
+        transition-delay:0.07s;
+}
+
+
 #verdo {
 border: 2px groove rgb(12, 150, 0);
 background-color:rgb(80, 207, 80);
@@ -18,15 +27,7 @@ background-color:rgb(80, 207, 80);
  margin-right:30px;
 }
 
-#red:hover {
-        border: 8px solid rgb(165, 12, 12);
-        background-color:rgb(206, 0, 0);
-        width:400px;
-        height:240px;
-        transition-delay:0.07s;
-}
-        
-#verdo:hover {
+     #verdo:hover {
         border: 8px solid rgb(22, 141, 11);
         background-color:rgb(8, 196, 8);
         width:400px;
@@ -54,24 +55,56 @@ border-top-right-radius:15px;
 }
 
 
-
-
-
-
-
-
 h1 {
-font-size:70px;
+font-size:90px;
 font-weight:900;
-display: block;
+background-color:#fff;
+text-decoration:underline;
+color:#000;
+display:inline-block;
+border-radius:25px;
+border:5px solid #000;
+padding:3px;
 }
+
 
 body {
 padding:40px; 
-border:20px solid rgb(97, 97, 97);      
+border:12px groove #333;      
 display: block;
 }
+
 
 html {
         background-color: white;
 }
+div {
+        background-color:white;
+        width:800px;
+        height:200px;
+        border:16px groove #333;
+        border-radius:4px;
+        opacity:80%;
+}
+img {
+height:300px;
+width:200px;
+
+}
+
+
+#res {
+border: 2px groove #a22;
+background-color:#00d;
+width:220px;
+height:100px;
+font-size:40px;
+margin-left:100px;
+}
+
+     #res:hover {
+        border: 8px solid #000;
+        background-color:#005;
+        transition-delay:0.07s;
+}
+
